# QuantRiver

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
adapters/backtest/: __init__.py  data_source_parquet.py
adapters/live/: binance_rest.py  binance_ws_aggtrade.py
core/data_engine/: boot_seeder.py  candle_aggregator_tf.py  candle_builder_1s.py  candle_river.py  data_engine.py  tick_river.py  warmup_registry.py
core/engine/: __init__.py  core_engine.py  event_bridge.py  history_priming.py  module_scheduler.py  signal_engine.py  strategy_router.py
core/execution/: __init__.py  backtest_adapter.py  execution_adapter.py  live_adapter.py  paper_adapter.py  position_handler.py  reporter.py  trade_state.py  trailing_configs.py  trailing_engine_v3.py
core/gates/: __init__.py  gate_engine.py  manifest.json
core/indicators/: __init__.py  indicator_engine.py  registry.py
core/models/: README.md  __init__.py  base.py  bundling.py  model_engine.py  model_module.py  time_utils.py  warmup.py
core/models/adapters/: __init__.py  regime_adapter.py  vol_adapter.py  (+1 more)
core/models_v2/: README.md  __init__.py
core/models_v3/: README.md  __init__.py
core/state/: __init__.py  events.py  market_state.py
core/strategies/: __init__.py  base.py  strategy_ema_cross_5m.py  strategy_opening_range_breakout_5m.py
core/types/: __init__.py  candle.py  execution_intent.py  signal.py  tick.py
data/klines/: README.md
docs/: anti_leakage.md  sample_backtest_summary.json
runners/: run_backtest.py  run_data_engine_smoke.py  run_live.py  run_paper.py  runtime_config.py
(+30 files in other folders)
